# debugnet

./: .gitignore  CMakeLists.txt  README.md
libdebugnet/: CMakeLists.txt  Makefile
libdebugnet/include/: debugnet.h
libdebugnet/source/: debugnet.c
sample/: CMakeLists.txt  Makefile  main.c
